# dataKeeper

./: .gitignore  .gitmodules  AbstractConnection.hxx  AbstractDatabase.cpp  AbstractDatabase.h  CMakeLists.txt  DatabaseCore.cpp  DatabaseCore.hxx  DatabasePlugin.cpp  DatabasePlugin.h  DbPluginHandler.hxx  KeeperApplication.cpp  KeeperApplication.h  MsgPackProto.hxx  main.cpp  messageDb.cpp  messageDb.hxx  messages_db.sql
CMake/: UseODB.cmake  armv4-toolchain
data/: plugins_conf.json
include/: Application.h  MsgPackProto.hxx  config.h
plugins/: CMakeLists.txt  MessagesConnection.cpp  MessagesConnection.hxx  MessagesDb.cpp  MessagesDb.hxx  MessagesPlugin.cpp  database.hxx  jsonConfigHelper.cpp  jsonConfigHelper.hxx  message.hxx
plugins/journal/: CMakeLists.txt  JournalConnection.cpp  JournalConnection.hxx  JournalPlugin.cpp  JournalRequests.cpp  JournalRequests.hxx  journal.hxx
plugins/messages/: CMakeLists.txt  MessagesConnection.cpp  MessagesConnection.hxx  MessagesPlugin.cpp  MessagesRequests.cpp  MessagesRequests.hxx  message.hxx
tests/: CMakeLists.txt  database.hxx  database_plugin.cpp  db_test.cpp  deleteAllRecordsTest.cpp  deleteAllTest.cpp  deleteMessageTest.cpp  deleteOldMessages.cpp  deleteOldMessagesTest.cpp  deleteOldRecordsTest.cpp  insertRecordTest.cpp  message.hxx  plugins_conf.json  plugins_test.cpp  requestTest.cpp  selectMsgTest.cpp  selectMsgsTest.cpp  selectRecordTest.cpp  selectRecordsTest.cpp  updateChannelTest.cpp  updateStatusTest.cpp
