cmake_minimum_required(VERSION 2.8)

add_executable(requestTest requestTest.cpp)
target_link_libraries(requestTest ZmqIpc messageRequests)

add_executable(selectMsgTest selectMsgTest.cpp)
target_link_libraries(selectMsgTest ZmqIpc messageRequests)

add_executable(selectMsgsTest selectMsgsTest.cpp)
target_link_libraries(selectMsgsTest ZmqIpc messageRequests)

add_executable(deleteAllTest deleteAllTest.cpp)
target_link_libraries(deleteAllTest ZmqIpc messageRequests)

add_executable(deleteMessageTest deleteMessageTest.cpp)
target_link_libraries(deleteMessageTest ZmqIpc messageRequests)

add_executable(deleteOldMessages deleteOldMessages.cpp)
target_link_libraries(deleteOldMessages ZmqIpc messageRequests)

add_executable(updateStatusTest updateStatusTest.cpp)
target_link_libraries(updateStatusTest ZmqIpc messageRequests)

add_executable(updateChannelTest updateChannelTest.cpp)
target_link_libraries(updateChannelTest ZmqIpc messageRequests)

add_executable(insertRecordTest insertRecordTest.cpp)
target_link_libraries(insertRecordTest ZmqIpc journalRequests)
